--- a/server/frontend/src/index.css
+++ b/server/frontend/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.donutChart-innertext {
+  opacity: 0 !important;
+}
+
+
+.donutChart{position:fixed}
