--- a/server/frontend/src/index.css
+++ b/server/frontend/src/index.css
@@ -14,3 +14,53 @@
   width: 0;
   height: 8px;
 }
+
+#proc  input[type="range" ]::-webkit-slider-runnable-track {margin-left: -10px; margin-right: -10px;}
+
+#proc input[type=range] {
+  -webkit-appearance: none;
+  background: #c7c7c7;
+  border-radius: 8px;
+  height: 48px;
+  width: 100%;
+  outline: none;
+}
+
+#proc input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+
+  background-color: transparent;
+  border: 3px solid #c7c7c7;
+  height: 30px;
+  width: 20px;
+  border-top-left-radius: 30%;
+  border-top-right-radius: 30%;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  transform: translateY(-50px);
+}
+
+#proc input[type=range]::-moz-range-thumb {
+  background-color: transparent;
+  border: 1px solid #c7c7c7;
+  height: 30px;
+  border-top-left-radius: 30%;
+  border-top-right-radius: 30%;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  transform: translateY(-50px); 
+}
+
+#proc input[type=range]::-moz-range-progress{
+  background: transparent;
+}
+
+.scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
